# strawberry_persisted_queries

./: LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml
strawberry_persisted_queries/: __init__.py  cache.py  extension.py
strawberry_persisted_queries/django_cache/: __init__.py  cache.py
strawberry_persisted_queries/safelisting/: __init__.py  dict.py
